src/translations/ja/sdk/android/v4/features/device-info.mdx
---
title: "デバイス情報を取得"
description: "これらのメソッドを使用することでコールバックに詳細を追加し、レポートを改善させましょう。"
slug: "ja/sdk/android/features/device-info"
multiVersion: true
---

Adjust SDKには、デバイス情報を返すヘルパーメソッドが含まれています。これらのメソッドを使用することでコールバックに詳細を追加し、レポートを改善させましょう。

## [AdjustのデバイスID](adjust-device-identifier)

<CodeBlock title="メソッドシグネチャー">

```java
public static String getAdid()
```

</CodeBlock>

Adjustは各デバイスに固有のAdjust Device ID（ADID）を生成します。`getAdid`メソッドを呼び出すと、このIDを`String`として返します。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adid = Adjust.getAdid()
```

</Tab>
<Tab title="Java" sync="java" >

```java
String adid = Adjust.getAdid();
```

</Tab>
<Tab title="Javascript" sync="js" >

```js
let adid = Adjust.getAdid();
```

</Tab>
</Tabs>

## [Google Play開発者サービス広告ID](google-play-services-advertising-id)

<CodeBlock title="メソッドシグネチャー">

```java
public static void getGoogleAdId(Context context, OnDeviceIdsRead onDeviceIdRead)
```

</CodeBlock>

Google Play 開発者サービス ID（GPS ADID）は、Androidデバイスのデバイス固有の識別子です。

ユーザーは、端末の設定「広告のパーソナライズをオプトアウトする」を切り替えることで、GPS ADIDの共有を拒否できます。ユーザーがこの設定を有効にしている場合、Adjust SDKはGPS ADIDの値を「0」の文字列で返します。

この値にアクセスするには、バックグラウンドスレッドで`getGoogleAdId`メソッドを呼び出す必要があります。GPS ADID値にアクセスするには、デリゲート関数を割り当てます。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getGoogleAdId(this, object : OnDeviceIdsRead {
   override fun onGoogleAdIdRead(googleAdId: String) {}
})
```

</Tab>
<Tab title="Java" sync="java" >

```java
Adjust.getGoogleAdId(this, new OnDeviceIdsRead() {
    @Override
    public void onGoogleAdIdRead(String googleAdId) {}
});
```

</Tab>
<Tab title="Javascript" sync="js" >

```js
Adjust.getGoogleAdId(function (googleAdId) {
   // ...
});
```

</Tab>
</Tabs>

## [Amazon 広告ID](amazon-advertiser-id)

<CodeBlock title="メソッドシグネチャー">

```java
public static String getAmazonAdId(final Context context)
```

</CodeBlock>

Amazon Advertising ID（Amazon Ad ID）は、Android端末の端末固有の識別子です。`getAmazonAdId`メソッドを呼び出すと、このIDを`String`として返します。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val amazonAdId = Adjust.getAmazonAdId(getApplicationContext())
```

</Tab>
<Tab title="Java" sync="java" >

```java
String amazonAdId = Adjust.getAmazonAdId(getApplicationContext());
```

</Tab>
<Tab title="Javascript" sync="js" >

```js
let amazonAdId = Adjust.getAmazonAdId();
```

</Tab>
</Tabs>
