src/translations/ja/sdk/android/v5/features/device-info.mdx
---
title: "デバイス情報を取得"
description: "これらのメソッドを使用することでコールバックに詳細を追加し、レポートを改善させましょう。"
slug: "ja/sdk/android/features/device-info"
multiVersion: true
---

Adjust SDKには、デバイス情報を返すヘルパーメソッドが含まれています。これらのメソッドを使用することでコールバックに詳細を追加し、レポートを改善させましょう。

## [AdjustのデバイスID](adjust-device-identifier)

<CodeBlock title="メソッドシグネチャー">

```java
public static void getAdid(final OnAdidReadListener onAdidReadListener)
```

</CodeBlock>

Adjustは各デバイスに固有のAdjust Device ID（ADID）を生成します。`Adjust.getAdid`メソッドにコールバックメソッドをパスすることで、この情報をAdjust SDKに非同期的にリクエストできます。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getAdid { adid ->
   // Your callback function
}
```

</Tab>
<Tab title="Java" sync="java" >

```java
Adjust.getAdid(new OnAdidReadListener() {
    @Override
    public void onAdidRead(String adid) {
      // Your callback function
    }
});

```

</Tab>
</Tabs>

## [Google Play開発者サービス広告ID](google-play-services-advertising-id)

<CodeBlock title="メソッドシグネチャー">

```java
public static void getGoogleAdId(Context context, OnDeviceIdsRead onDeviceIdRead)
```

</CodeBlock>

Google Play 開発者サービス ID（GPS ADID）は、Androidデバイスのデバイス固有の識別子です。

ユーザーは、端末の設定「広告のパーソナライズをオプトアウトする」を切り替えることで、GPS ADIDの共有を拒否できます。ユーザーがこの設定を有効にしている場合、Adjust SDKはGPS ADIDの値を「0」の文字列で返します。

この値にアクセスするには、バックグラウンドスレッドで`getGoogleAdId`メソッドを呼び出す必要があります。GPS ADID値にアクセスするには、デリゲート関数を割り当てます。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getGoogleAdId(this, object : OnDeviceIdsRead {
   override fun onGoogleAdIdRead(googleAdId: String) {}
})
```

</Tab>
<Tab title="Java" sync="java" >

```java
Adjust.getGoogleAdId(this, new OnDeviceIdsRead() {
    @Override
    public void onGoogleAdIdRead(String googleAdId) {}
});
```

</Tab>
</Tabs>

## [Amazon 広告ID](amazon-advertiser-id)

<CodeBlock title="メソッドシグネチャー">

```java
public static void getAmazonAdId(final Context context,final OnAmazonAdIdReadListener onAmazonAdIdReadListener)
```

</CodeBlock>

Amazon Advertising ID（Amazon Ad ID）は、Android端末の端末固有の識別子です。`Adjust.getAmazonAdId`メソッドにコールバックメソッドをパスすることで、この情報をAdjust SDKに非同期的にリクエストできます。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getAmazonAdId(applicationContext, object : OnAmazonAdIdReadListener {
   override fun onAmazonAdIdRead(amazonAdId: String) {}
   override fun onFail(message: String) {}
})
```

</Tab>
<Tab title="Java" sync="java" >

```java
Adjust.getAmazonAdId(getApplicationContext(), new OnAmazonAdIdReadListener() {
    @Override
    public void onAmazonAdIdRead(String amazonAdId) {
    }

    @Override
    public void onFail(String message) {
    }
});

```

</Tab>
</Tabs>

## [Adjust SDKバージョンゲッター](sdk-version-getter)

Adjust SDKのバージョンを読み取るには、 `Adjust.getSdkVersion`メソッドにコールバック関数をパスしてください。バージョン番号は、コールバック関数で`String`として利用できます。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getSdkVersion {sdkVersion ->
   // Your callback function
}
```

</Tab>
<Tab title="Java" sync="java">

```java
Adjust.getSdkVersion(new OnSdkVersionReadListener() {
   @Override
   public void onSdkVersionRead(String sdkVersion) {
      // Your callback function
   }
})
```

</Tab>
</Tabs>
